--- a/index.html
+++ b/index.html
@@ -81,30 +81,30 @@
 
     <section class="gallery">
         <div class="gallery-container">
-            <div class="gallery-item"><img src="./gallery/I.png"></div>
-            <div class="gallery-item"><img src="./gallery/II.png"></div>
-            <div class="gallery-item"><img src="./gallery/III.png"></div>
-            <div class="gallery-item"><img src="./gallery/IV.png"></div>
-            <div class="gallery-item"><img src="./gallery/V.png"></div>
-            <div class="gallery-item"><img src="./gallery/VI.png"></div>
-            <div class="gallery-item"><img src="./gallery/VII.png"></div>
-            <div class="gallery-item"><img src="./gallery/VIII.png"></div>
-            <div class="gallery-item"><img src="./gallery/IX.png"></div>
-            <div class="gallery-item"><img src="./gallery/X.png"></div>
-            <div class="gallery-item"><img src="./gallery/XI.png"></div>
-            <div class="gallery-item"><img src="./gallery/XII.png"></div>
-            <div class="gallery-item"><img src="./gallery/I.png"></div>
-            <div class="gallery-item"><img src="./gallery/II.png"></div>
-            <div class="gallery-item"><img src="./gallery/III.png"></div>
-            <div class="gallery-item"><img src="./gallery/IV.png"></div>
-            <div class="gallery-item"><img src="./gallery/V.png"></div>
-            <div class="gallery-item"><img src="./gallery/VI.png"></div>
-            <div class="gallery-item"><img src="./gallery/VII.png"></div>
-            <div class="gallery-item"><img src="./gallery/VIII.png"></div>
-            <div class="gallery-item"><img src="./gallery/IX.png"></div>
-            <div class="gallery-item"><img src="./gallery/X.png"></div>
-            <div class="gallery-item"><img src="./gallery/XI.png"></div>
-            <div class="gallery-item"><img src="./gallery/XII.png"></div>
+            <div class="gallery-item"><img src=".I.png"></div>
+            <div class="gallery-item"><img src=".II.png"></div>
+            <div class="gallery-item"><img src=".III.png"></div>
+            <div class="gallery-item"><img src=".IV.png"></div>
+            <div class="gallery-item"><img src=".V.png"></div>
+            <div class="gallery-item"><img src=".VI.png"></div>
+            <div class="gallery-item"><img src=".VII.png"></div>
+            <div class="gallery-item"><img src=".VIII.png"></div>
+            <div class="gallery-item"><img src=".IX.png"></div>
+            <div class="gallery-item"><img src=".X.png"></div>
+            <div class="gallery-item"><img src=".XI.png"></div>
+            <div class="gallery-item"><img src=".XII.png"></div>
+            <div class="gallery-item"><img src=".I.png"></div>
+            <div class="gallery-item"><img src=".II.png"></div>
+            <div class="gallery-item"><img src=".III.png"></div>
+            <div class="gallery-item"><img src=".IV.png"></div>
+            <div class="gallery-item"><img src=".V.png"></div>
+            <div class="gallery-item"><img src=".VI.png"></div>
+            <div class="gallery-item"><img src=".VII.png"></div>
+            <div class="gallery-item"><img src=".VIII.png"></div>
+            <div class="gallery-item"><img src=".IX.png"></div>
+            <div class="gallery-item"><img src=".X.png"></div>
+            <div class="gallery-item"><img src=".XI.png"></div>
+            <div class="gallery-item"><img src=".XII.png"></div>
         </div>
     </section>
 
