--- a/index.html
+++ b/index.html
@@ -81,30 +81,28 @@
 
     <section class="gallery">
         <div class="gallery-container">
-            <div class="gallery-item"><img src=".I.png"></div>
-            <div class="gallery-item"><img src=".II.png"></div>
-            <div class="gallery-item"><img src=".III.png"></div>
-            <div class="gallery-item"><img src=".IV.png"></div>
-            <div class="gallery-item"><img src=".V.png"></div>
-            <div class="gallery-item"><img src=".VI.png"></div>
-            <div class="gallery-item"><img src=".VII.png"></div>
-            <div class="gallery-item"><img src=".VIII.png"></div>
-            <div class="gallery-item"><img src=".IX.png"></div>
-            <div class="gallery-item"><img src=".X.png"></div>
-            <div class="gallery-item"><img src=".XI.png"></div>
-            <div class="gallery-item"><img src=".XII.png"></div>
-            <div class="gallery-item"><img src=".I.png"></div>
-            <div class="gallery-item"><img src=".II.png"></div>
-            <div class="gallery-item"><img src=".III.png"></div>
-            <div class="gallery-item"><img src=".IV.png"></div>
-            <div class="gallery-item"><img src=".V.png"></div>
-            <div class="gallery-item"><img src=".VI.png"></div>
-            <div class="gallery-item"><img src=".VII.png"></div>
-            <div class="gallery-item"><img src=".VIII.png"></div>
-            <div class="gallery-item"><img src=".IX.png"></div>
-            <div class="gallery-item"><img src=".X.png"></div>
-            <div class="gallery-item"><img src=".XI.png"></div>
-            <div class="gallery-item"><img src=".XII.png"></div>
+            <div class="gallery-item"><img src="I.png"></div>
+            <div class="gallery-item"><img src="II.png"></div>
+            <div class="gallery-item"><img src="III.png"></div>
+            <div class="gallery-item"><img src="IV.png"></div>
+            <div class="gallery-item"><img src="V.png"></div>
+            <div class="gallery-item"><img src="VI.png"></div>
+            <div class="gallery-item"><img src="VII.png"></div>
+            <div class="gallery-item"><img src="VIII.png"></div>
+            <div class="gallery-item"><img src="IX.png"></div>
+            <div class="gallery-item"><img src="X.png"></div>
+            <div class="gallery-item"><img src="XI.png"></div>
+            <div class="gallery-item"><img src="XII.png"></div>
+            <div class="gallery-item"><img src="I.png"></div>
+            <div class="gallery-item"><img src="II.png"></div>
+            <div class="gallery-item"><img src="III.png"></div>
+            <div class="gallery-item"><img src="IV.png"></div>
+            <div class="gallery-item"><img src="V.png"></div>
+            <div class="gallery-item"><img src="VI.png"></div>
+            <div class="gallery-item"><img src="VII.png"></div>
+            <div class="gallery-item"><img src="VIII.png"></div>
+            <div class="gallery-item"><img src="IX.png"></div>
+            <div class="gallery-item"><img src="X.png"></div>
         </div>
     </section>
 
